Fix detail page background and carousel cutoff issues
- Add detailGradient to empty background values in detailPagePrimaryContainer and detailPageSecondaryContainer
- Set itemBackdrop height to 40vh instead of 0vh
- Fix carousel overflow and max-width constraints causing right-side cutoff

--- a/Finimalism11.css
+++ b/Finimalism11.css
@@ -77,7 +77,7 @@ html {
   left: 0;
   width: 100%;
   height: calc(100% + 4em);
-  background: ;
+  background: var(--detailGradient);
   background-size: cover;
   opacity: 1;
   z-index: -1;
@@ -96,7 +96,7 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  background: ;
+  background: var(--detailGradient);
   background-size: cover;
   opacity: 1;
   z-index: -1;
@@ -3344,7 +3344,7 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 .layout-tv #specialsCollapsible.verticalSection.detailVerticalSection {
   top: 18.5em;
   left: 30.5em;
-  max-width: 54vh;
+  max-width: calc(100vw - 32em);
   height: 18em;
   position: fixed !important;
   color: #fff;
@@ -3409,8 +3409,8 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 .layout-desktop .nextUpSection.verticalSection.detailVerticalSection,
 .layout-tv .nextUpSection.verticalSection.detailVerticalSection {
   top: 0em !important;
-  max-width: 107vh;
-  overflow: hidden;
+  max-width: unset;
+  overflow: visible;
 }
 
 .layout-desktop #listChildrenCollapsible,
@@ -3418,7 +3418,7 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
   top: 17.5em !important;
   transition: max-width 0.2s ease-out 1s, background 1s ease-out 2s, border-color 0.5s ease-out 2s, padding-left 1s ease-out 1s, padding-right 1s ease-out 1s !important;
   border-radius: var(--rounding);
-  max-width: 59vh !important;
+  max-width: calc(100vw - 32em) !important;
   height: 16.2em !important;
   padding-right: 1em;
 }
@@ -4322,7 +4322,7 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 }
 
 .itemBackdrop {
-  height: 0vh;
+  height: 40vh;
 }
 
 .detailPageWrapperContainer {
